Improvements: - Process markdown from model and convert it to HTML for display - Submit question with pressing Enter - Immediately insert question into chat and progress on waiting for model - Autoscroll to last message on load/ask/receive answer - Decreased height of all TTYG content to prevent footer from going off-screen and causing vertical scrolling - Removed "Graph" from "GraphAgent" - Preselect active repository when opening create agent modal - Automatic open/hide of method settings when enabling/disabling a method

--- a/src/css/ttyg/ttyg.css
+++ b/src/css/ttyg/ttyg.css
@@ -112,7 +112,7 @@ chat area
 .ttyg-view .chat-content .chat {
     max-width: 800px;
     margin: auto;
-    height: calc(100vh - 10em);
+    height: calc(100vh - 13em);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -129,4 +129,9 @@ chat area
 
 .selected-chat-panel {
     height: 100%;
+}
+
+/* Better handling of markdown-derived HTML inside the assistant message */
+.assistant-message li > p:has(+:not(p)) {
+    margin-bottom: 0;
 }
